--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button class="mr-1" (click)="toggleForMenuClick()">
       <mat-icon>menu</mat-icon>
     </button>
-    <span>Lab04</span>
+    <a mat-button [routerLink]="['home']">VirtualLabs</a>
   </mat-toolbar-row>
   <mat-toolbar-row>
     <span>Applicazioni Internet</span>
@@ -13,7 +13,9 @@
   <mat-sidenav mode="side" position="start">
     <div class="container" style="width: 300px;">
       <mat-nav-list>
-        <mat-list-item>
+        <mat-list-item
+          [routerLink]="['teacher/course/applicazioni-internet/students']"
+        >
           App Internet
         </mat-list-item>
         <mat-divider> </mat-divider>
@@ -23,117 +25,19 @@
     </div>
   </mat-sidenav>
   <mat-sidenav-content
-    ><mat-tab-group>
-      <mat-tab label="Studenti">
-        <div class="container">
-          <h3>Elenco studenti iscritti al corso</h3>
-          <form class="my-form">
-            <mat-form-field style="width: 300px;" appearance="outline">
-              <mat-label>Search student</mat-label>
-              <input
-                type="text"
-                placeholder="search student"
-                aria-label="Number"
-                matInput
-                [formControl]="myControl"
-                [matAutocomplete]="auto"
-              />
-              <mat-autocomplete
-                autoActiveFirstOption
-                #auto="matAutocomplete"
-                [displayWith]="displayFn"
-                (optionSelected)="selectStudentToAdd($event.option.value)"
-              >
-                <mat-option
-                  *ngFor="let option of filteredOptions | async"
-                  [value]="option"
-                >
-                  {{ option.firstName }}
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
-            <button
-              mat-raised-button
-              [disabled]="!studentToAdd"
-              (click)="addStudentToTable()"
-            >
-              add
-            </button>
-          </form>
-          <table
-            mat-table
-            [dataSource]="dataSource"
-            class="elevation-z6"
-            matSort
-          >
-            <ng-container matColumnDef="select">
-              <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox
-                  (change)="$event ? masterToggle() : null"
-                  [checked]="selectedStudents.hasValue() && isAllSelected()"
-                  [indeterminate]="
-                    selectedStudents.hasValue() && !isAllSelected()
-                  "
-                ></mat-checkbox>
-              </th>
-              <td mat-cell *matCellDef="let student">
-                <mat-checkbox
-                  (click)="$event.stopPropagation()"
-                  (change)="$event ? toggleStudent(student) : null"
-                  [checked]="selectedStudents.isSelected(student)"
-                ></mat-checkbox>
-              </td>
-            </ng-container>
-            <!-- Position Column -->
-            <ng-container matColumnDef="id">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-              <td mat-cell *matCellDef="let student">{{ student.id }}</td>
-            </ng-container>
+    ><nav mat-tab-nav-bar>
+      <a
+        mat-tab-link
+        *ngFor="let tab of tabs"
+        [routerLink]="tab.path"
+        routerLinkActive
+        #rla="routerLinkActive"
+        [active]="rla.isActive"
+      >
+        {{ tab.value }}
+      </a>
+    </nav>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Surname</th>
-              <td mat-cell *matCellDef="let student">{{ student.name }}</td>
-            </ng-container>
-
-            <!-- Weight Column -->
-            <ng-container matColumnDef="firstName">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                First Name
-              </th>
-              <td mat-cell *matCellDef="let student">
-                {{ student.firstName }}
-              </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="colsToDisplay"></tr>
-            <tr mat-row *matRowDef="let row; columns: colsToDisplay"></tr>
-          </table>
-          <mat-paginator
-            [pageSizeOptions]="[5, 10, 20]"
-            showFirstLastButtons
-          ></mat-paginator>
-          <div class="button-area">
-            <button
-              color="accent"
-              [disabled]="selectedStudents.isEmpty()"
-              mat-raised-button
-              (click)="deleteSelectedStudent()"
-            >
-              Delete Selected
-            </button>
-
-            <span *ngFor="let student of selectedStudents.selected">
-              {{ student.id }} ,</span
-            >
-          </div>
-        </div>
-      </mat-tab>
-      <mat-tab label="Gruppi">
-        <div class="container">
-          <h1>Some other tab content</h1>
-        </div>
-      </mat-tab>
-    </mat-tab-group></mat-sidenav-content
-  >
+    <router-outlet></router-outlet
+  ></mat-sidenav-content>
 </mat-sidenav-container>
