--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -12,20 +11,29 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ai20-lab04-primary: mat-palette($mat-indigo);
-$ai20-lab04-accent: mat-palette($mat-pink, A200, A100, A400);
+$ai20-lab05-primary: mat-palette($mat-indigo);
+$ai20-lab05-accent: mat-palette($mat-pink, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$ai20-lab04-warn: mat-palette($mat-red);
+$ai20-lab05-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$ai20-lab04-theme: mat-light-theme($ai20-lab04-primary, $ai20-lab04-accent, $ai20-lab04-warn);
+$ai20-lab05-theme: mat-light-theme(
+  $ai20-lab05-primary,
+  $ai20-lab05-accent,
+  $ai20-lab05-warn
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($ai20-lab04-theme);
+@include angular-material-theme($ai20-lab05-theme);
 
-
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
