--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,22 @@
       <mat-icon>menu</mat-icon>
     </button>
     <a mat-button [routerLink]="['home']">VirtualLabs</a>
+    <span class="fill-remaining-space"></span>
+    <button
+      *ngIf="!isLogged; else showLogout"
+      mat-button
+      class="right"
+      (click)="goToLogin()"
+    >
+      Login
+      <mat-icon>account_circle</mat-icon>
+    </button>
+    <ng-template #showLogout>
+      <button mat-button class="right" (click)="logout()">
+        {{ user?.email }}
+        <mat-icon>exit_to_app</mat-icon>
+      </button>
+    </ng-template>
   </mat-toolbar-row>
   <mat-toolbar-row>
     <span>Applicazioni Internet</span>
