--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,13 +2,23 @@ body, html
     height: 100%
     margin: 0
 
-//mat-sidenav-container
-    //display: flex
-    //margin: 20px
-    //height: 100%
 .ml-1
     margin-left: 1em
 .mr-1
     margin-right: 1em
+.full-width
+    width: 100%
 table
     width: 100%
+.fill-remaining-space
+    flex: 1 1 auto
+.loader
+    position: absolute
+    top: 0
+    bottom: 0
+    left: 0
+    right: 0
+    background-color: #ffffffad
+    display: flex
+    justify-content: center
+    align-items: center
